# GreenMind

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  startup.sh
lab/: composant.xlsx  ~$composant.xlsx
lib/: CMakeLists.txt
lib/inc/: version.h
lib/src/: version.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
